--- a/conf/labbactfiocruz.config
+++ b/conf/labbactfiocruz.config
@@ -6,7 +6,7 @@ params {
 
     reads = "${baseDir}/data/full_data/*_{R1,R2}*fastq.gz"
 
-    mtbseq_library_name = "somelib"
+    mtbseq_library_name = "lib"
 
     mtbseq_project_name = "BovisHuman"
 
