--- a/conf/standard.config
+++ b/conf/standard.config
@@ -11,3 +11,28 @@ params {
     mtbseq_project_name = "BovisHuman"
 
 }
+
+
+process {
+    withName:
+    'FASTQC' {
+        container = 'quay.io/biocontainers/fastqc:0.11.9--0'
+        cpus = 2
+        memory = "4 GB"
+    }
+
+    withName:
+    'MULTIQC' {
+        container = 'quay.io/biocontainers/multiqc:1.9--pyh9f0ad1d_0'
+        cpus = 3
+        memory = "8 GB"
+    }
+
+    withName:
+    'TRIMMOMATIC' {
+        container = 'quay.io/biocontainers/trimmomatic:0.35--6'
+        cpus = 3
+        memory = "8 GB"
+    }
+
+}
