--- a/conf/standard.config
+++ b/conf/standard.config
@@ -35,4 +35,13 @@ process {
         memory = "8 GB"
     }
 
+
+    withName:
+    'SPOTYPING' {
+        container = 'abhi18av/spotyping'
+        cpus = 3
+        memory = "8 GB"
+    }
+
+
 }
