Update the container again

--- a/conf/standard.config
+++ b/conf/standard.config
@@ -38,9 +38,11 @@ process {
 
     withName:
     'SPOTYPING' {
-        container = 'abhi18av/spotyping'
         cpus = 3
-        memory = "4 GB"
+        memory = '4 GB'
+        container = 'quay.io/bioinformatics_playground/spotyping:0.0.1'
+        // container = 'abhi18av/spotyping'
+
     }
 
 
