update reads pattern

--- a/conf/standard.config
+++ b/conf/standard.config
@@ -4,7 +4,7 @@ params {
 
     gatk38_jar = "${baseDir}/resources/GenomeAnalysisTK.jar"
 
-    reads = "${baseDir}/data/full_data/*_{R1,R2}*fastq.gz"
+    reads = "${baseDir}/data/full_data/*_{1,2}*fastq.gz"
 
     mtbseq_library_name = "lib"
 
