Added step-2 for main workflow

--- a/conf/standard.config
+++ b/conf/standard.config
@@ -6,6 +6,8 @@ params {
 
     reads = "${baseDir}/data/full_data/*_{1,2}*fastq.gz"
 
+    referenceFasta = "${baseDir}/data/reference/*fasta"
+
     mtbseq_library_name = "lib"
 
     mtbseq_project_name = "BovisHuman"
@@ -45,5 +47,40 @@ process {
 
     }
 
+    withName:
+    'QUAST' {
+        cpus = 3
+        memory = '4 GB'
+        container = 'quay.io/biocontainers/quast:5.0.2--py37pl526hb5aa323_2'
+    }
 
+
+    withName:
+    'SPADES' {
+        cpus = 3
+        memory = '4 GB'
+        container = 'quay.io/biocontainers/spades:3.14.0--h2d02072_0'
+    }
+
+
+    withName:
+    'MTBSEQ_PER_SAMPLE' {
+        cpus = 6
+        memory = '13 GB'
+        container = 'quay.io/biocontainers/mtbseq:1.0.3--pl526_1'
+    }
+
+    withName:
+    'MTBSEQ_COHORT' {
+        cpus = 6
+        memory = '13 GB'
+        container = 'quay.io/biocontainers/mtbseq:1.0.3--pl526_1'
+    }
+
+    withName:
+    'UTILS_FILTER_CONTIGS' {
+        container = 'quay.io/biocontainers/perl-bioperl:1.7.2--pl526_11'
+        cpus = 2
+        memory = "3 GB"
+    }
 }
