add bwa module and configs

--- a/conf/standard.config
+++ b/conf/standard.config
@@ -83,4 +83,20 @@ process {
         cpus = 2
         memory = "3 GB"
     }
+
+    withName:
+    'BWA_MEM' {
+        container = 'quay.io/biocontainers/bwa:0.7.17--hed695b0_7'
+        cpus = 2
+        memory = "3 GB"
+    }
+
+    withName:
+    'BWA_INDEX' {
+        container = 'quay.io/biocontainers/bwa:0.7.17--hed695b0_7'
+        cpus = 2
+        memory = "3 GB"
+    }
+
+
 }
